Resolved wraping issue with skills section. Cleaned up some code comments.

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -23,7 +23,7 @@
   }
 
   .highlight {
-      color: #00BBFF !important;
+      color: $highlight !important;
       font-weight: bold !important;
       opacity: .9 !important;
   }
