--- a/src/content/Content.scss
+++ b/src/content/Content.scss
@@ -20,6 +20,9 @@ section {
 
 .skills {
     @include font(null, 14px, bold, null, wrap);
+    display: flex;
+    flex-wrap: wrap;
+    box-sizing: border-box;
 
     span {
         background-color: rgb(0, 187, 255, .6);
